--- a/cloud-functions/game_engine_daily/requirements.txt
+++ b/cloud-functions/game_engine_daily/requirements.txt
@@ -1,34 +1,4 @@
--i https://pypi.org/simple
-cachetools==4.1.1; python_version ~= '3.5'
-certifi==2020.11.8
-chardet==3.0.4
-click==7.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 ./dist/game_engine-0.0.41-py3-none-any.whl
-flask==1.1.2
-google-api-core[grpc]==1.23.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-google-auth==1.23.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-google-cloud-core==1.4.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+
 google-cloud-firestore==1.9.0
-google-cloud-pubsub==2.1.0
-googleapis-common-protos[grpc]==1.52.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-grpc-google-iam-v1==0.12.3
-grpcio==1.33.2
-idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-itsdangerous==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-jinja2==2.11.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-libcst==0.3.14; python_version >= '3.6'
-markupsafe==1.1.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-mypy-extensions==0.4.3
-proto-plus==1.11.0
-protobuf==3.14.0
-pyasn1-modules==0.2.8
-pyasn1==0.4.8
-pytz==2020.4
-pyyaml==5.3.1
-requests==2.25.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-rsa==4.6; python_version >= '3.5'
-six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-typing-extensions==3.7.4.3
-typing-inspect==0.6.0
-urllib3==1.26.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
-werkzeug==1.0.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+google-cloud-pubsub
