--- a/cloud-functions/transaction_categorise/requirements.txt
+++ b/cloud-functions/transaction_categorise/requirements.txt
@@ -1,54 +1,2 @@
--i https://pypi.org/simple
-
-cachetools==4.1.1
-
-certifi==2020.11.8
-
-chardet==3.0.4
-
-google-api-core==1.23.0
-
-google-auth==1.23.0
-
-google-cloud-core==1.4.3
-
 google-cloud-firestore==1.9.0
-
-google-cloud-pubsub==2.1.0
-
-googleapis-common-protos==1.52.0
-
-grpc-google-iam-v1==0.12.3
-
-grpcio==1.33.2
-
-idna==2.10
-
-libcst==0.3.14
-
-mypy-extensions==0.4.3
-
-proto-plus==1.11.0
-
-protobuf==3.14.0
-
-pyasn1-modules==0.2.8
-
-pyasn1==0.4.8
-
-pytz==2020.4
-
-pyyaml==5.3.1
-
-requests==2.25.0
-
-rsa==4.6; python_version >= '3.5'
-
-six==1.15.0
-
-typing-extensions==3.7.4.3
-
-typing-inspect==0.6.0
-
-urllib3==1.26.2
-
+google-cloud-pubsub
